--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Scheherazade+New&display=swap');
 /* General Styles */
 body {
   font-family: 'Cinzel', serif;
@@ -9,7 +8,8 @@ body {
   padding: 0;
   text-align: center;
   direction: ltr;
-  font-family: 'Scheherazade New', serif;
+  font-family: "Times New Roman", Times, serif;
+
 }
 /* 🔘 Language Switch (Unified Style) */
 .language-switch {
@@ -246,6 +246,7 @@ body {
     margin-top: 10px;
   }
 }
+
 
 
 
