--- a/style-ar.css
+++ b/style-ar.css
@@ -1,5 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Scheherazade+New&display=swap');
+
+
+
 body {
-  font-family: 'Cinzel', serif;
+  font-family: 'Scheherazade New', serif;
   background-color: #f9f7f3;
   color: #333;
   margin: 0;
@@ -195,3 +199,4 @@ body {
   display: block;
   margin: 0 auto 8px;
 }
+
